--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Iterate over the games\n",
@@ -331,8 +331,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved games TTL file.\n"
+     ]
+    }
+   ],
    "source": [
     "# Save the data in the Turtle format\n",
     "with open(gamesTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
@@ -357,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -372,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "for genre, row in genres.iterrows():\n",
@@ -391,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# Save genre data in the Turtle format\n",
@@ -413,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -427,8 +435,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Panasonic': 'Japan', 'Sanyo': 'Japan', 'GoldStar': 'Korea, Republic of', 'Commodore': 'Canada', 'Atari Inc': 'United States of America', 'Atari Corporation': 'United States of America', 'Coleco': 'United States of America', 'Sega': 'Japan', 'Fujitsu': 'Japan', 'Mattel Electronics': 'United States of America', 'Nintendo': 'Japan', 'Magnavox': 'United States of America', 'Philips': 'Netherlands', 'Sony': 'Japan', 'Tec Toy': 'Brazil', 'Majesco Entertainment': 'Japan', 'Microsoft': 'United States of America', 'Zeebo Inc': 'United States of America', 'TecToy': 'Brazil'}\n"
+     ]
+    }
+   ],
    "source": [
     "manufacturerDict = {}\n",
     "\n",
@@ -503,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "# Save data in the Turtle format\n",
@@ -525,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
@@ -545,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
@@ -583,8 +599,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved stats TTL file.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Save the data in the Turtle format\n",
@@ -608,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
@@ -623,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
@@ -675,8 +699,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 20,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved game-sales TTL file.\n"
+     ]
+    }
+   ],
    "source": [
     "# Save the data in the Turtle format\n",
     "with open(gameSalesTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
@@ -699,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -714,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "#indiegamesdevelopers.info()\n",
@@ -745,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "videoGameDevelopers = pd.read_csv(videoGameDevelopersPath, sep=\",\")"
@@ -756,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "#indiegamesdevelopers.info()\n",
@@ -786,8 +818,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 25,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved company TTL file.\n"
+     ]
+    }
+   ],
    "source": [
     "# Save the data in the Turtle format\n",
     "with open(companiesTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
@@ -810,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -822,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "# Create the node to add to the Graph\n",
@@ -852,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "# Save the data in the Turtle format\n",
@@ -876,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "outputs": [],
    "source": [
     "rawCountriesRegions = pd.read_csv(rawCountriesRegionsPath, sep=\",\", index_col='name')\n",
@@ -889,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "countriesRegions = rawCountriesRegions.replace(to_replace=['Asia', 'Europe', 'Africa', 'Oceania', 'Americas', 'NaN'],\n",
@@ -912,8 +952,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 38,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved Countries TTL file.\n"
+     ]
+    }
+   ],
    "source": [
     "# Save the data in the Turtle format\n",
     "with open(countriesTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
@@ -936,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
@@ -948,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "for id, row in platforms.iterrows():\n",
@@ -998,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
