fixes and cleaning

--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 156,
    "metadata": {
     "id": "JXZwhL0Bmzfp"
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 157,
    "outputs": [],
    "source": [
     "absPath = str(Path(os.path.abspath(os.getcwd())).absolute())\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 158,
    "outputs": [],
    "source": [
     "# Country Ontology\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 159,
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -145,7 +145,15 @@
     "    for i in range(len(genre)):\n",
     "        list.append([])\n",
     "        list[i].append(genre[i])\n",
-    "        list[i].append(genre[i].lower().replace(\"'\", \"\").replace(\" \", \"-\"))\n",
+    "        genreID=\"\"\n",
+    "        for t in genre[i]:\n",
+    "            if t.isalnum():\n",
+    "                genreID = genreID + t\n",
+    "            else:\n",
+    "                genreID = genreID + \"-\"\n",
+    "\n",
+    "        list[i].append(genreID.lower().strip(\"-\"))\n",
+    "        #list[i].append(genre[i].lower().replace(\"'\", \"\").replace(\" \", \"-\").strip(\"-\"))\n",
     "    return (list)\n",
     "\n",
     "\n",
@@ -214,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 160,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -226,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 161,
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
@@ -242,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 162,
    "outputs": [],
    "source": [
     "# Iterate over the games\n",
@@ -331,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 163,
    "outputs": [
     {
      "name": "stdout",
@@ -365,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 164,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -380,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 165,
    "outputs": [],
    "source": [
     "for genre, row in genres.iterrows():\n",
@@ -399,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 166,
    "outputs": [],
    "source": [
     "# Save genre data in the Turtle format\n",
@@ -421,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 167,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -435,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 168,
    "outputs": [
     {
      "name": "stdout",
@@ -519,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 169,
    "outputs": [],
    "source": [
     "# Save data in the Turtle format\n",
@@ -541,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 170,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
@@ -561,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 171,
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
@@ -599,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 172,
    "outputs": [
     {
      "name": "stdout",
@@ -632,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 173,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
@@ -647,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 174,
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
@@ -699,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 175,
    "outputs": [
     {
      "name": "stdout",
@@ -723,7 +731,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Company"
+    "### Company\n",
+    "\n",
+    "## indie-game-developers"
    ],
    "metadata": {
     "collapsed": false
@@ -731,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 176,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -746,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 177,
    "outputs": [],
    "source": [
     "#indiegamesdevelopers.info()\n",
@@ -769,7 +779,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### video-game-developers"
+    "## video-game-developers"
    ],
    "metadata": {
     "collapsed": false
@@ -777,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 178,
    "outputs": [],
    "source": [
     "videoGameDevelopers = pd.read_csv(videoGameDevelopersPath, sep=\",\")"
@@ -788,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 179,
    "outputs": [],
    "source": [
     "#indiegamesdevelopers.info()\n",
@@ -803,7 +813,26 @@
     "\n",
     "    # Add the Company\n",
     "    g.add((Company, HLTB['officialName'], Literal(row['Developer'], datatype=XSD.string)))\n",
-    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## manufacturers"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "outputs": [],
+   "source": [
     "for manufacturer, country in manufacturerDict.items():\n",
     "    manufacturerURI = URIRef(HLTB[setCompanyID(manufacturer)])\n",
     "    g.add((manufacturerURI, RDF.type, HLTB.Company))\n",
@@ -818,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 181,
    "outputs": [
     {
      "name": "stdout",
@@ -842,7 +871,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#Region"
+    "### Country"
    ],
    "metadata": {
     "collapsed": false
@@ -850,73 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "outputs": [],
-   "source": [
-    "# Create Graph\n",
-    "#g = createGraph()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "outputs": [],
-   "source": [
-    "# Create the node to add to the Graph\n",
-    "#Region = URIRef(HLTB['eu'])\n",
-    "#g.add((Region, RDF.type, HLTB.Region))\n",
-    "#g.add((Region, HLTB[{'eu', 'jp', 'na', 'other', 'global'}], Literal('eu', datatype=XSD.string)))\n",
-    "\n",
-    "#Region = URIRef(HLTB['jp'])\n",
-    "#g.add((Region, RDF.type, HLTB.Region))\n",
-    "#g.add((Region, HLTB[{'eu', 'jp', 'na', 'other', 'global'}], Literal('jp', datatype=XSD.string)))\n",
-    "\n",
-    "#Region = URIRef(HLTB['na'])\n",
-    "#g.add((Region, RDF.type, HLTB.Region))\n",
-    "#g.add((Region, HLTB[{'eu', 'jp', 'na', 'other', 'global'}], Literal('na', datatype=XSD.string)))\n",
-    "\n",
-    "#Region = URIRef(HLTB['other'])\n",
-    "#g.add((Region, RDF.type, HLTB.Region))\n",
-    "#g.add((Region, HLTB[{'eu', 'jp', 'na', 'other', 'global'}], Literal('other', datatype=XSD.string)))\n",
-    "\n",
-    "#Region = URIRef(HLTB['global'])\n",
-    "#g.add((Region, RDF.type, HLTB.Region))\n",
-    "#g.add((Region, HLTB[{'eu', 'jp', 'na', 'other', 'global'}], Literal('global', datatype=XSD.string)))\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "outputs": [],
-   "source": [
-    "# Save the data in the Turtle format\n",
-    "#with open(regionsTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
-    "#    fp.write(g.serialize(format=\"turtle\"))\n",
-    "\n",
-    "#print(\"Saved Regions TTL file.\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Country"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 182,
    "outputs": [],
    "source": [
     "rawCountriesRegions = pd.read_csv(rawCountriesRegionsPath, sep=\",\", index_col='name')\n",
@@ -929,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 183,
    "outputs": [],
    "source": [
     "countriesRegions = rawCountriesRegions.replace(to_replace=['Asia', 'Europe', 'Africa', 'Oceania', 'Americas', 'NaN'],\n",
@@ -952,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 184,
    "outputs": [
     {
      "name": "stdout",
@@ -984,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 185,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
@@ -996,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 186,
    "outputs": [],
    "source": [
     "for id, row in platforms.iterrows():\n",
@@ -1046,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -1067,11 +1030,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
     "# USELESS CODE\n",
+    "\n",
+    "# Create Graph\n",
+    "#g = createGraph()\n",
+    "# Create the node to add to the Graph\n",
+    "#Region = URIRef(HLTB['eu'])\n",
+    "#g.add((Region, RDF.type, HLTB.Region))\n",
+    "#g.add((Region, HLTB[{'eu', 'jp', 'na', 'other', 'global'}], Literal('eu', datatype=XSD.string)))\n",
+    "\n",
+    "#Region = URIRef(HLTB['jp'])\n",
+    "#g.add((Region, RDF.type, HLTB.Region))\n",
+    "#g.add((Region, HLTB[{'eu', 'jp', 'na', 'other', 'global'}], Literal('jp', datatype=XSD.string)))\n",
+    "\n",
+    "#Region = URIRef(HLTB['na'])\n",
+    "#g.add((Region, RDF.type, HLTB.Region))\n",
+    "#g.add((Region, HLTB[{'eu', 'jp', 'na', 'other', 'global'}], Literal('na', datatype=XSD.string)))\n",
+    "\n",
+    "#Region = URIRef(HLTB['other'])\n",
+    "#g.add((Region, RDF.type, HLTB.Region))\n",
+    "#g.add((Region, HLTB[{'eu', 'jp', 'na', 'other', 'global'}], Literal('other', datatype=XSD.string)))\n",
+    "\n",
+    "#Region = URIRef(HLTB['global'])\n",
+    "#g.add((Region, RDF.type, HLTB.Region))\n",
+    "#g.add((Region, HLTB[{'eu', 'jp', 'na', 'other', 'global'}], Literal('global', datatype=XSD.string)))\n",
+    "\n",
+    "# Save the data in the Turtle format\n",
+    "#with open(regionsTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
+    "#    fp.write(g.serialize(format=\"turtle\"))\n",
+    "\n",
+    "#print(\"Saved Regions TTL file.\")\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# for val in manufacturerDict.values():\n",
     "#     print(val, getCountry2Digits(val))\n",
