game sales, stats and game nodes fixes

--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 49,
    "metadata": {
     "id": "JXZwhL0Bmzfp"
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 50,
    "outputs": [],
    "source": [
     "absPath = str(Path(os.path.abspath(os.getcwd())).absolute())\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 51,
    "outputs": [],
    "source": [
     "# Country Ontology\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 52,
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -205,14 +205,14 @@
     "\n",
     "We serialize the data according to the following workflow:\n",
     "\n",
-    "1. Load the CSV file and iterate through it\n",
-    "2. Create a unique ID by ourself based on the name of the class.\n",
+    "1. Load the CSV file and iterate through it, merging them if needed.\n",
+    "2. Create a unique ID by ourselves based on the name of the class.\n",
     "3. Add the node to the graph using the unique ID.\n",
     "4. Add all the data properties.\n",
     "5. Add all the object properties.\n",
     "6. Serialize the data and save them into a TTL file.\n",
     "\n",
-    "### Games\n",
+    "## Games\n",
     "\n",
     "Now serializing the Game class"
    ],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 53,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 54,
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 55,
    "outputs": [],
    "source": [
     "# Iterate over the games\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 56,
    "outputs": [
     {
      "name": "stdout",
@@ -363,7 +363,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Genre\n",
+    "## Genre\n",
     "\n",
     "Now serializing the Genre class"
    ],
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 57,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 58,
    "outputs": [],
    "source": [
     "for genre, row in genres.iterrows():\n",
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 59,
    "outputs": [],
    "source": [
     "# Save genre data in the Turtle format\n",
@@ -421,7 +421,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Platforms"
+    "## Platforms"
    ],
    "metadata": {
     "collapsed": false
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 60,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 61,
    "outputs": [
     {
      "name": "stdout",
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 62,
    "outputs": [],
    "source": [
     "# Save data in the Turtle format\n",
@@ -541,7 +541,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Stats\n"
+    "## Stats\n"
    ],
    "metadata": {
     "collapsed": false
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 63,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 64,
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
@@ -581,17 +581,18 @@
     "        g.add((StatsID, HLTB.Type, HLTB.Stats))\n",
     "\n",
     "        #Add Time information\n",
-    "        g.add((StatsID, HLTB[\"polledTime\"], Literal(int(row[\"count_comp\"]), datatype=XSD.int)))\n",
-    "        g.add((StatsID, HLTB[\"mainTime\"], Literal(int(row[\"comp_main\"]), datatype=XSD.int)))\n",
-    "        g.add((StatsID, HLTB[\"mainPlusTime\"], Literal(int(row[\"comp_plus\"]), datatype=XSD.int)))\n",
-    "        g.add((StatsID, HLTB[\"completionistTime\"], Literal(int(row[\"comp_100\"]), datatype=XSD.int)))\n",
-    "        g.add((StatsID, HLTB[\"slowestTime\"], Literal(int(row[\"comp_low\"]), datatype=XSD.int)))\n",
-    "        g.add((StatsID, HLTB[\"fastestTime\"], Literal(int(row[\"comp_high\"]), datatype=XSD.int)))\n",
+    "        if pd.notna(row[\"count_comp\"]) and int(row[\"count_comp\"]) > 1:\n",
+    "            g.add((StatsID, HLTB[\"polledTime\"], Literal(int(row[\"count_comp\"]), datatype=XSD.int)))\n",
+    "            g.add((StatsID, HLTB[\"mainTime\"], Literal(int(row[\"comp_main\"]), datatype=XSD.int)))\n",
+    "            g.add((StatsID, HLTB[\"mainPlusTime\"], Literal(int(row[\"comp_plus\"]), datatype=XSD.int)))\n",
+    "            g.add((StatsID, HLTB[\"completionistTime\"], Literal(int(row[\"comp_100\"]), datatype=XSD.int)))\n",
+    "            g.add((StatsID, HLTB[\"slowestTime\"], Literal(int(row[\"comp_low\"]), datatype=XSD.int)))\n",
+    "            g.add((StatsID, HLTB[\"fastestTime\"], Literal(int(row[\"comp_high\"]), datatype=XSD.int)))\n",
     "\n",
     "        #Add remaining stats\n",
-    "        if pd.notna(row[\"critic_score\"]):\n",
+    "        if pd.notna(row[\"critic_score\"]) and (float(row[\"critic_score\"]) > 0.1) :\n",
     "            g.add((StatsID, HLTB[\"criticScore\"], Literal(row[\"critic_score\"], datatype=XSD.float)))\n",
-    "        if pd.notna(row[\"user_score\"]):\n",
+    "        if pd.notna(row[\"user_score\"]) and (float(row[\"user_score\"]) > 0.1):\n",
     "            g.add((StatsID, HLTB[\"userScore\"], Literal(row[\"user_score\"], datatype=XSD.float)))\n",
     "\n",
     "        if pd.notna(row[\"release_date\"]):\n",
@@ -607,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 65,
    "outputs": [
     {
      "name": "stdout",
@@ -632,7 +633,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Game sales"
+    "## Game sales"
    ],
    "metadata": {
     "collapsed": false
@@ -640,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 66,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
@@ -655,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 67,
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
@@ -707,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 68,
    "outputs": [
     {
      "name": "stdout",
@@ -731,9 +732,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Company\n",
+    "## Company\n",
     "\n",
-    "## indie-game-developers"
+    "### indie-game-developers"
    ],
    "metadata": {
     "collapsed": false
@@ -741,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 69,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -756,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 70,
    "outputs": [],
    "source": [
     "#indiegamesdevelopers.info()\n",
@@ -779,7 +780,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## video-game-developers"
+    "### video-game-developers"
    ],
    "metadata": {
     "collapsed": false
@@ -787,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 71,
    "outputs": [],
    "source": [
     "videoGameDevelopers = pd.read_csv(videoGameDevelopersPath, sep=\",\")"
@@ -798,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 72,
    "outputs": [],
    "source": [
     "#indiegamesdevelopers.info()\n",
@@ -822,7 +823,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## manufacturers"
+    "### manufacturers"
    ],
    "metadata": {
     "collapsed": false
@@ -830,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 73,
    "outputs": [],
    "source": [
     "for manufacturer, country in manufacturerDict.items():\n",
@@ -847,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 74,
    "outputs": [
     {
      "name": "stdout",
@@ -871,7 +872,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Country"
+    "## Country"
    ],
    "metadata": {
     "collapsed": false
@@ -879,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 75,
    "outputs": [],
    "source": [
     "rawCountriesRegions = pd.read_csv(rawCountriesRegionsPath, sep=\",\", index_col='name')\n",
@@ -892,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 76,
    "outputs": [],
    "source": [
     "countriesRegions = rawCountriesRegions.replace(to_replace=['Asia', 'Europe', 'Africa', 'Oceania', 'Americas', 'NaN'],\n",
@@ -915,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 77,
    "outputs": [
     {
      "name": "stdout",
@@ -939,7 +940,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Platform sales"
+    "## Platform sales"
    ],
    "metadata": {
     "collapsed": false
@@ -947,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 78,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
@@ -959,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 79,
    "outputs": [],
    "source": [
     "for id, row in platforms.iterrows():\n",
@@ -1009,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
