--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {
     "id": "JXZwhL0Bmzfp"
    },
@@ -37,14 +37,14 @@
     "\n",
     "import pandas as pd\n",
     "# Load the required libraries\n",
-    "from rdflib import Graph, Literal, RDF, URIRef, Namespace\n",
+    "from rdflib import Graph, Literal, RDF, URIRef, Namespace, RDFS\n",
     "# RDFLib knows about some namespaces, like XSD\n",
     "from rdflib.namespace import XSD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "absPath = str(Path(os.path.abspath(os.getcwd())).absolute())\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Country Ontology\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Iterate over the games\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "for genre, row in genres.iterrows():\n",
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# Save genre data in the Turtle format\n",
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "# Save data in the Turtle format\n",
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "#indiegamesdevelopers.info()\n",
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "videoGameDevelopers = pd.read_csv(videoGameDevelopersPath, sep=\",\")"
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "#indiegamesdevelopers.info()\n",
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "for manufacturer, country in manufacturerDict.items():\n",
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "rawCountriesRegions = pd.read_csv(rawCountriesRegionsPath, sep=\",\", index_col='name')\n",
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "countriesRegions = rawCountriesRegions.replace(to_replace=['Asia', 'Europe', 'Africa', 'Oceania', 'Americas', 'NaN'],\n",
@@ -908,7 +908,7 @@
     "        region = 'jp'\n",
     "    elif code in northAmericaCountries:\n",
     "        region = 'na'\n",
-    "    g.add((CNS[code], HLTB['subClassOf'], HLTB[region]))"
+    "    g.add((CNS[code], RDFS['subClassOf'], HLTB[region]))"
    ],
    "metadata": {
     "collapsed": false
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 29,
    "outputs": [
     {
      "name": "stdout",
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "for id, row in platforms.iterrows():\n",
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
